fixed: - left-padding in nested explorer directories - expandOrCollapseFileTree now works

--- a/assets/css/partials/_explorer.scss
+++ b/assets/css/partials/_explorer.scss
@@ -83,18 +83,19 @@
             ul {
                 li {
                     &.file {
-                        border-left: 1px solid var(--color-border);
                         padding-left: 12px;
                         padding-top: 2px;
+                        &:not(:last-child) {
+                            border-left: 1px solid var(--color-border);
+                        }
                     }
                 }
             }
     
             li {
                 &.file {
-                    margin-left: 0px;
+                    margin-left: 12px;
                     padding-bottom: 2px;
-    
                     &:hover {
                         background-color: var(--explorer-button-hover);
                     }
@@ -113,6 +114,9 @@
         ul li,
         ul ul li {
             padding-bottom: 2px;
+        }
+        ul ul li {
+            padding-left: 12px;
         }
     }
 }    
